tests/parser/parser-first-error.swg
// ============================================================================
// Parser First Error
// ============================================================================

} // swc-expected-error {{parser_err_unexpected_token}}
{ // swc-expected-error {{parser_err_expected_closing}}
;
